--- a/trunk/arrg/ua_drivers/videre_stereo_cam/cfg/VidereStereoCam.cfg
+++ b/trunk/arrg/ua_drivers/videre_stereo_cam/cfg/VidereStereoCam.cfg
@@ -52,15 +52,15 @@ videre_mode = gen.enum([gen.const("PROC_MODE_NONE",          str_t, "none",     
 
 gen.add("videre_mode",      str_t,  SensorLevels.RECONFIGURE_STOP, "Amount of processing done on camera if STOC", "none", edit_method = videre_mode)
 gen.add("calculate_points", bool_t, SensorLevels.RECONFIGURE_STOP, "Calculate point cloud from disparity", True)
-gen.add("convert_to_color", bool_t, SensorLevels.RECONFIGURE_STOP, "Calculate color from Bayer pattern",   True)
+gen.add("convert_to_color", bool_t, SensorLevels.RECONFIGURE_STOP, "Calculate color from Bayer pattern", True)
 
-gen.add("brightness_auto", bool_t, SensorLevels.RECONFIGURE_RUNNING, "Auto adjust brightness",       True)
+gen.add("brightness_auto", bool_t, SensorLevels.RECONFIGURE_RUNNING, "Auto adjust brightness", True)
 gen.add("brightness",      int_t,  SensorLevels.RECONFIGURE_RUNNING, "Brightness level if not auto", 50, 0, 255)
 
-gen.add("exposure_auto", bool_t, SensorLevels.RECONFIGURE_RUNNING, "Auto adjust exposure",       True)
+gen.add("exposure_auto", bool_t, SensorLevels.RECONFIGURE_RUNNING, "Auto adjust exposure", True)
 gen.add("exposure",      int_t,  SensorLevels.RECONFIGURE_RUNNING, "Exposure level if not auto", 0, 0, 529)
 
-gen.add("gain_auto", bool_t, SensorLevels.RECONFIGURE_RUNNING, "Auto adjust gain",       True)
+gen.add("gain_auto", bool_t, SensorLevels.RECONFIGURE_RUNNING, "Auto adjust gain", True)
 gen.add("gain",      int_t,  SensorLevels.RECONFIGURE_RUNNING, "Gain level if not auto", 0, 0, 48)
 
 gen.add("whitebalance_auto", bool_t, SensorLevels.RECONFIGURE_RUNNING, "Auto adjust whitebalance", True)
@@ -68,11 +68,13 @@ gen.add("whitebalance_blue", int_t,  SensorLevels.RECONFIGURE_RUNNING, "Blue/U l
 gen.add("whitebalance_red",  int_t,  SensorLevels.RECONFIGURE_RUNNING, "Red/V level if not auto",  15, 0, 30)
 
 gen.add("companding", bool_t, SensorLevels.RECONFIGURE_RUNNING, "Bring up low light levels", True)
-gen.add("hdr",        bool_t, SensorLevels.RECONFIGURE_RUNNING, "High dynamic range",        False)
+gen.add("hdr",        bool_t, SensorLevels.RECONFIGURE_RUNNING, "High dynamic range", False)
 gen.add("frame_id",   str_t,  SensorLevels.RECONFIGURE_RUNNING, "The optical camera TF frame set in message headers", "stereo")
 
 gen.add("uniqueness_threshold", int_t, SensorLevels.RECONFIGURE_RUNNING, "Filter out if best match does not sufficiently exceed the next-best match", 36, 0, 189)
-gen.add("texture_threshold",    int_t, SensorLevels.RECONFIGURE_RUNNING, "Filter out if SAD window response does not exceed texture threshold",       30, 0, 189)
-gen.add("horopter",             int_t, SensorLevels.RECONFIGURE_RUNNING, "Change horopter",                                                           0, 0, 63)
+gen.add("texture_threshold",    int_t, SensorLevels.RECONFIGURE_RUNNING, "Filter out if SAD window response does not exceed texture threshold", 30, 0, 189)
+gen.add("speckle_size",         int_t, SensorLevels.RECONFIGURE_RUNNING, "Reject regions smaller than this size, pixels", 100, 0, 1000)
+gen.add("speckle_range",        int_t, SensorLevels.RECONFIGURE_RUNNING, "Max allowed difference between detected disparities", 4, 0, 31)
+gen.add("horopter",             int_t, SensorLevels.RECONFIGURE_RUNNING, "Change horopter", 0, 0, 63)
 
 exit(gen.generate('videre_stereo_cam', "videre_stereo_cam", "VidereStereoCam"))
