--- a/trunk/arrg/ua_experimental/verb_learning/.classpath
+++ b/trunk/arrg/ua_experimental/verb_learning/.classpath
@@ -5,10 +5,9 @@
 			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="/home/dhewlett/ros/ros_experimental/rosjava/bin"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" path="oomdp_msgs.srv"/>
-	<classpathentry kind="src" path="oomdp_msgs.msg"/>
-	<classpathentry kind="src" path="msg/java"/>
-	<classpathentry kind="src" path="srv/java"/>
+	<classpathentry kind="src" path="msg_gen/java"/>
+	<classpathentry kind="src" path="srv_gen/java"/>
+	<classpathentry kind="src" path="rosjava"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/time_series"/>
 	<classpathentry kind="lib" path="/time_series/lib/collections-generic-4.01.jar"/>
@@ -29,11 +28,9 @@
 	<classpathentry kind="lib" path="/time_series/lib/jung-samples-2.0.1.jar"/>
 	<classpathentry kind="lib" path="/time_series/lib/jung-visualization-2.0.1.jar"/>
 	<classpathentry kind="lib" path="/time_series/lib/log4j-1.2.15.jar"/>
-	<classpathentry kind="lib" path="/time_series/lib/rosjava_msgs.jar"/>
 	<classpathentry kind="lib" path="/time_series/lib/stax-api-1.0.1.jar"/>
 	<classpathentry kind="lib" path="/time_series/lib/vecmath-1.3.1.jar"/>
 	<classpathentry kind="lib" path="/time_series/lib/wstx-asl-3.2.6.jar"/>
-	<classpathentry kind="lib" path="eclipse_lib/rosjava.jar"/>
 	<classpathentry kind="lib" path="lib/commons-lang-2.5.jar"/>
 	<classpathentry kind="lib" path="/time_series/lib/time-series.jar"/>
 	<classpathentry kind="lib" path="lib/guava-r07.jar"/>
