--- a/trunk/arrg/ua_robots/wubble_description/params/w2_base_self_filter.yaml
+++ b/trunk/arrg/ua_robots/wubble_description/params/w2_base_self_filter.yaml
@@ -2,6 +2,8 @@ min_sensor_dist: .05
 self_see_default_padding: .05
 self_see_default_scale: 1.0
 self_see_links:
+  - name: L0_base_link
+  - name: L1_shoulder_pitch_link
   - name: L2_shoulder_yaw_link
   - name: L3_shoulder_roll_link
   - name: L4_elbow_pitch_link
