--- a/trunk/arrg/ua_experimental/wubble_world_2d/.classpath
+++ b/trunk/arrg/ua_experimental/wubble_world_2d/.classpath
@@ -1,42 +1,46 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="lib/commons-cli.jar"/>
-	<classpathentry kind="lib" path="lib/commons-math-2.1.jar"/>
-	<classpathentry kind="lib" path="lib/dom4j-1.6.1.jar"/>
-	<classpathentry kind="lib" path="lib/FengGUI-Optional.jar"/>
-	<classpathentry kind="lib" path="lib/FengGUI.jar"/>
-	<classpathentry kind="lib" path="lib/ibxm.jar"/>
-	<classpathentry kind="lib" path="lib/JBox2D-2.0.1-b250-Full.jar"/>
-	<classpathentry kind="lib" path="lib/jbox2d-2.0.1-library-only.jar"/>
-	<classpathentry kind="lib" path="lib/jinput.jar"/>
-	<classpathentry kind="lib" path="lib/jnlp.jar"/>
-	<classpathentry kind="lib" path="lib/jogg-0.0.7.jar"/>
-	<classpathentry kind="lib" path="lib/jorbis-0.0.15.jar"/>
-	<classpathentry kind="lib" path="lib/log4j-1.2.15.jar"/>
-	<classpathentry kind="lib" path="lib/logback-classic.jar"/>
-	<classpathentry kind="lib" path="lib/logback-core.jar"/>
-	<classpathentry kind="lib" path="lib/lwjgl_util_applet.jar"/>
-	<classpathentry kind="lib" path="lib/lwjgl_util.jar"/>
-	<classpathentry kind="lib" path="lib/lwjgl-debug.jar"/>
-	<classpathentry kind="lib" path="lib/lwjgl.jar"/>
-	<classpathentry kind="lib" path="lib/oomdp.jar"/>
-	<classpathentry kind="lib" path="lib/packulike.jar"/>
-	<classpathentry kind="lib" path="lib/pedigree.jar"/>
-	<classpathentry kind="lib" path="lib/QuickTimeDemo.jar"/>
-	<classpathentry kind="lib" path="lib/scalar.jar"/>
-	<classpathentry kind="lib" path="lib/slf4j-api.jar"/>
-	<classpathentry kind="lib" path="lib/slick-examples.jar"/>
-	<classpathentry kind="lib" path="lib/slick-sources.jar"/>
-	<classpathentry kind="lib" path="lib/slick-util.jar"/>
-	<classpathentry kind="lib" path="lib/slick.jar"/>
-	<classpathentry kind="lib" path="lib/sqlitejdbc-v056.jar"/>
-	<classpathentry kind="lib" path="lib/tinylinepp.jar"/>
-	<classpathentry kind="lib" path="lib/TWL.jar"/>
-	<classpathentry kind="lib" path="lib/xpp3_min-1.1.4c.jar"/>
-	<classpathentry kind="lib" path="lib/xpp3_xpath-1.1.4c.jar"/>
-	<classpathentry kind="lib" path="lib/xpp3-1.1.4c.jar"/>
-	<classpathentry kind="lib" path="lib/xuggle-xuggler.jar"/>
+	<classpathentry kind="src" path="wubble_svn/src">
+		<attributes>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="wubble_world_2d/wubble_svn/natives/linux"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="wubble_svn/lib/commons-cli.jar"/>
+	<classpathentry kind="lib" path="wubble_svn/lib/commons-math-2.1.jar"/>
+	<classpathentry kind="lib" path="wubble_svn/lib/dom4j-1.6.1.jar"/>
+	<classpathentry kind="lib" path="wubble_svn/lib/FengGUI-Optional.jar"/>
+	<classpathentry kind="lib" path="wubble_svn/lib/FengGUI.jar"/>
+	<classpathentry kind="lib" path="wubble_svn/lib/ibxm.jar"/>
+	<classpathentry kind="lib" path="wubble_svn/lib/JBox2D-2.0.1-b250-Full.jar"/>
+	<classpathentry kind="lib" path="wubble_svn/lib/jbox2d-2.0.1-library-only.jar"/>
+	<classpathentry kind="lib" path="wubble_svn/lib/jinput.jar"/>
+	<classpathentry kind="lib" path="wubble_svn/lib/jnlp.jar"/>
+	<classpathentry kind="lib" path="wubble_svn/lib/jogg-0.0.7.jar"/>
+	<classpathentry kind="lib" path="wubble_svn/lib/jorbis-0.0.15.jar"/>
+	<classpathentry kind="lib" path="wubble_svn/lib/log4j-1.2.15.jar"/>
+	<classpathentry kind="lib" path="wubble_svn/lib/logback-classic.jar"/>
+	<classpathentry kind="lib" path="wubble_svn/lib/logback-core.jar"/>
+	<classpathentry kind="lib" path="wubble_svn/lib/lwjgl_util_applet.jar"/>
+	<classpathentry kind="lib" path="wubble_svn/lib/lwjgl_util.jar"/>
+	<classpathentry kind="lib" path="wubble_svn/lib/lwjgl-debug.jar"/>
+	<classpathentry kind="lib" path="wubble_svn/lib/lwjgl.jar"/>
+	<classpathentry kind="lib" path="wubble_svn/lib/oomdp.jar"/>
+	<classpathentry kind="lib" path="wubble_svn/lib/packulike.jar"/>
+	<classpathentry kind="lib" path="wubble_svn/lib/pedigree.jar"/>
+	<classpathentry kind="lib" path="wubble_svn/lib/QuickTimeDemo.jar"/>
+	<classpathentry kind="lib" path="wubble_svn/lib/scalar.jar"/>
+	<classpathentry kind="lib" path="wubble_svn/lib/slf4j-api.jar"/>
+	<classpathentry kind="lib" path="wubble_svn/lib/slick-examples.jar"/>
+	<classpathentry kind="lib" path="wubble_svn/lib/slick-sources.jar"/>
+	<classpathentry kind="lib" path="wubble_svn/lib/slick-util.jar"/>
+	<classpathentry kind="lib" path="wubble_svn/lib/slick.jar"/>
+	<classpathentry kind="lib" path="wubble_svn/lib/sqlitejdbc-v056.jar"/>
+	<classpathentry kind="lib" path="wubble_svn/lib/tinylinepp.jar"/>
+	<classpathentry kind="lib" path="wubble_svn/lib/TWL.jar"/>
+	<classpathentry kind="lib" path="wubble_svn/lib/xpp3_min-1.1.4c.jar"/>
+	<classpathentry kind="lib" path="wubble_svn/lib/xpp3_xpath-1.1.4c.jar"/>
+	<classpathentry kind="lib" path="wubble_svn/lib/xpp3-1.1.4c.jar"/>
+	<classpathentry kind="lib" path="wubble_svn/lib/xuggle-xuggler.jar"/>
 	<classpathentry kind="output" path="src"/>
 </classpath>
