--- a/arrg/ua_experimental/wubble_world_2d/Makefile
+++ b/arrg/ua_experimental/wubble_world_2d/Makefile
@@ -1,6 +1,6 @@
 all: installed
 
-SVN_URL	= http://wubbleworld2d.googlecode.com/svn/trunk/
+SVN_URL	= https://wubbleworld2d.googlecode.com/svn/trunk/
 SVN_DIR = wubble_svn
 
 include $(shell rospack find mk)/svn_checkout.mk
@@ -8,18 +8,13 @@ include $(shell rospack find mk)/svn_checkout.mk
 include $(shell rospack find mk)/cmake.mk
 
 installed: $(SVN_DIR)
-	if test -e src; \
+	if test -e bin/data; \
 	then \
-		echo "Wubble World 2D is already installed."; \
+		echo "WW2D data is already installed."; \
 	else \
-		mv $(SVN_DIR)/src src; \
-		mkdir bin; \
-		cp -r src/data bin; \
-		mv $(SVN_DIR)/lib lib; \
-		mv $(SVN_DIR)/natives natives; \
-		mkdir states; \
-		mkdir logs; \
+		mkdir -p bin; \
+		cp -r $(SVN_DIR)/src/data bin; \
 	fi
 
 wipe: clean 
-	rm -rf bin build src lib natives states logs patched rospack_nosubdirs $(SVN_DIR)
+	rm -rf bin src logs build patched rospack_nosubdirs $(SVN_DIR)
